# fechamento-cont-bil

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
config/: settings.py  urls.py
fechamento/: admin.py  apps.py  context_processors.py  forms.py  models.py  permissions.py  services.py  sso.py  urls.py  views.py
fechamento/management/commands/: abrir_ciclo.py  abrir_ciclo_automatico.py  importar_catalogo.py  importar_lucro_real.py  seed_template.py  sincronizar_omie.py
fechamento/migrations/: 0001_initial.py  0002_alter_empresa_cnpj_empresa_uniq_empresa_cnpj.py  0003_perfil.py  0004_catalogoempresa.py  0005_item_pontua_alter_itemstatus_status.py  0006_fase_equipes_fase_principal.py  0007_alter_ciclo_data_referencia_alter_ciclo_referencia_and_more.py  0008_remove_fase_equipes_fase_empresas_and_more.py  0009_perfil_equipes.py  0010_indicadorceipim.py  0011_empresa_participa_ceipim.py  0012_ocorrencia.py  0013_perfil_cargo_perfil_data_admissao.py  0014_ticketportal.py  0015_empresa_participa_lucro_real_acompanhamentolucroreal.py  0016_acompanhamentolucroreal_status_t1_and_more.py  0017_acompanhamentolucroreal_status_geral.py
fechamento/templatetags/: fechamento_extras.py
templates/: base.html
templates/fechamento/: _filtro_equipe.html  _item_row.html  _stat.html  consolidado.html  index.html  matriz.html
templates/fechamento/ceipim/: _conteudo.html  indicadores.html
templates/fechamento/gestao/: _ciclo_abrir_preview.html  _ciclo_empresas.html  _ciclo_prazo_row.html  _empresa_ativa.html  home.html  (+12 more)
templates/registration/: login.html
(+2 files in other folders)
