[project]
name = "projeto-chamado-aut"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "django-htmx>=1.19",
    "python-dotenv>=1.0",
    "gunicorn>=23.0",
    "whitenoise>=6.7",
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.3",
    "requests>=2.32",
]

[dependency-groups]
dev = [
    "openpyxl>=3.1.5",
]
